--- a/icecream-web/app/Footer/Footer.css
+++ b/icecream-web/app/Footer/Footer.css
@@ -5,7 +5,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    border-top: 3px solid #b8ecce; 
+    border-top: 3px solid #b8ecce;
+    position: fixed;
     left:0;
     bottom:0;
     right:0;
