add links to registration page

--- a/icecream-web/app/login/LoginPage.css
+++ b/icecream-web/app/login/LoginPage.css
@@ -35,11 +35,11 @@
 }
 
 #login-button {
-    background-color: #eee060
+    background-color: #b8ecce
 }
 
 #register-button {
-    background-color: #b8ecce;
+    background-color: #eee060;
 }
 
 #login-form {
