--- a/icecream-web/app/login/LoginPage.css
+++ b/icecream-web/app/login/LoginPage.css
@@ -1,4 +1,4 @@
-#login-page-component {
+#lg-login-page-component {
     display:flex;
     flex-direction: column;
     flex: 1;
@@ -10,7 +10,7 @@
     
 }
 
-#login-form-container{
+#lg-login-form-container{
     display: flex;
     flex-direction: column;
     background-color: #eee060;
@@ -20,12 +20,12 @@
     text-align: center;
 }
 
-#login-register-button-container {
+#lg-login-register-button-container {
     display: flex;
     justify-content: space-between;
 }
 
-#login-register-button-container button {
+#lg-login-register-button-container button {
     width: 50%;
     padding: 15px;
     border: none;
@@ -34,21 +34,21 @@
     cursor: pointer;
 }
 
-#login-button {
-    background-color: #b8ecce
-}
-
-#register-button {
+#lg-login-button {
     background-color: #eee060;
 }
 
-#login-form {
+#lg-register-button {
+    background-color: #b8ecce;
+}
+
+#lg-login-form {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#login-form label {
+#lg-login-form label {
     font-size: 14px;
     font-weight: normal;
     text-align: left;
@@ -57,7 +57,7 @@
     padding-left: 5%;
 }
 
-#login-form input {
+#lg-login-form input {
     width: 90%;
     padding: 10px;
     margin: 5px 0;
@@ -68,7 +68,7 @@
     margin-left: 5%;    
 }
 
-#login-form button {
+#lg-submit-login-button{
     background-color: #da8558;
     border: none;
     padding: 10px 15px;
@@ -79,7 +79,7 @@
     margin-top: 10px;
 }
 
-#remember-me-container {
+#lg-remember-me-container {
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -89,7 +89,7 @@
     padding-left: 5%;
 }
 
-#remember-me {
+#lg-remember-me {
     width: 16px;
     height: 16px;
     cursor: pointer;
@@ -97,13 +97,13 @@
     display: inline-block;
 }
 
-#remember-me-label {
+#lg-remember-me-label {
     font-size: 14px;
     display: inline-block;
     vertical-align: middle;
 }
 
-#login-form input[type="checkbox"]{   
+#lg-login-form input[type="checkbox"]{   
     width: fit-content;
     margin: 3px;
     height: 16px;
