--- a/icecream-web/app/dashboard/dashboard.css
+++ b/icecream-web/app/dashboard/dashboard.css
@@ -25,3 +25,8 @@
     white-space: nowrap;
     overflow: hidden;
 }
+
+.db-map-container {
+    width: 100%;
+    height: 500px; /* Set a specific height */
+}
