--- a/icecream-web/app/dashboard/dashboard.css
+++ b/icecream-web/app/dashboard/dashboard.css
@@ -26,7 +26,22 @@
     overflow: hidden;
 }
 
-.db-map-container {
-    width: 100%;
-    height: 500px; /* Set a specific height */
-}
+
+#db-van-info-container {
+    display: flex;  
+    justify-content: space-between; 
+    align-items: stretch; 
+    width: 100%; 
+  }
+  
+  #db-van-list,
+  #db-map-container {
+    flex: 1;  
+    min-width: 0; 
+  }
+  
+  #db-map-container {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+  }
