--- a/icecream-web/app/login/LoginPage.css
+++ b/icecream-web/app/login/LoginPage.css
@@ -109,3 +109,8 @@
     height: 16px;
     cursor: pointer;
 }
+
+.lg-email-error, .lg-password-error, #lg-error-message {
+    color: #da8558;
+    font-size: 16px;
+}
