adjust landing page to be responsive

--- a/icecream-web/app/globals.css
+++ b/icecream-web/app/globals.css
@@ -18,13 +18,9 @@ body {
   flex-direction: column;
 }
   
-main {
+/* main {
   height:100vh;
-}
-
-
-
-
+} */
 
 /* body {
   color: var(--foreground);
