--- a/icecream-web/app/login/LoginPage.css
+++ b/icecream-web/app/login/LoginPage.css
@@ -1,5 +1,5 @@
 #lg-login-page-component {
-    display:flex;
+    display: flex;
     flex-direction: column;
     flex: 1;
     background-color: #eab2bb;
@@ -10,7 +10,7 @@
     
 }
 
-#lg-login-form-container{
+#lg-login-form-container {
     display: flex;
     flex-direction: column;
     background-color: #eee060;
@@ -115,4 +115,10 @@
 .lg-email-error, .lg-password-error, #lg-error-message {
     color: #da8558;
     font-size: 16px;
+}
+
+@media screen and (max-width: 450px) {
+    #lg-login-form-container {
+        width: 250px;
+    }
 }
