--- a/icecream-web/app/registration/RegistrationPage.css
+++ b/icecream-web/app/registration/RegistrationPage.css
@@ -85,3 +85,8 @@
     font-size: 16px;
 }
 
+@media screen and (max-width: 450px) {
+    #rg-registration-form-container {
+        width: 250px;
+    }
+}
