--- a/icecream-web/app/login/LoginPage.css
+++ b/icecream-web/app/login/LoginPage.css
@@ -117,6 +117,14 @@
     font-size: 16px;
 }
 
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px #eab2bb inset !important;
+}
+
 @media screen and (max-width: 450px) {
     #lg-login-form-container {
         width: 250px;
